--- a/k8s-manifest/deployment.yaml
+++ b/k8s-manifest/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: your-app
-        image: ashithss/docker_testv1:latest # ${DOCKER_IMAGE}:${env.BUILD_ID}
+        image: 499756076901.dkr.ecr.us-east-1.amazonaws.com/demoapp:latest # ${DOCKER_IMAGE}:${env.BUILD_ID}
         ports:
         - containerPort: 5000
         livenessProbe:
